[gd_scene load_steps=15 format=3 uid="uid://dgowg6adbatb5"]

[ext_resource type="Script" path="res://scripts/pickup.gd" id="1_2518t"]
[ext_resource type="Texture2D" uid="uid://dvofpjmmlebur" path="res://assest/gui/selected_character.png" id="2_7p586"]
[ext_resource type="Resource" uid="uid://p68hc5ifuogf" path="res://resource/characters/004.tres" id="2_uycfk"]
[ext_resource type="Shader" path="res://shader/player.gdshader" id="3_icm0m"]
[ext_resource type="Texture2D" uid="uid://b6whcemmw8ws8" path="res://assest/characters/003.png" id="4_f3x80"]
[ext_resource type="AudioStream" uid="uid://cn80ugcbl55wr" path="res://sound/get_card.wav" id="6_qug5m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yvxkf"]
size = Vector2(16, 20)

[sub_resource type="Animation" id="Animation_n7ldc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_qmjuk"]
resource_name = "float"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rgwyi"]
_data = {
"RESET": SubResource("Animation_n7ldc"),
"float": SubResource("Animation_qmjuk")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rhrab"]
shader = ExtResource("3_icm0m")
shader_parameter/color_opacity = 0.9
shader_parameter/main_color = Color(1, 1, 0, 1)

[sub_resource type="Gradient" id="Gradient_kdik7"]
offsets = PackedFloat32Array(0, 0.52459, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 0, 1, 0.901961, 0.776471, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_g8k8u"]
gradient = SubResource("Gradient_kdik7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_t6f2j"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector3(0, 0, 0)
radial_accel_min = 1.0
radial_accel_max = 25.0
scale_min = 0.1
color_ramp = SubResource("GradientTexture1D_g8k8u")

[node name="pickup" type="Area2D"]
position = Vector2(0, -5)
collision_layer = 8
script = ExtResource("1_2518t")
item_carry = ExtResource("2_uycfk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_yvxkf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rgwyi")
}
autoplay = "float"

[node name="Sprite" type="Node2D" parent="."]
scale = Vector2(0.7, 0.7)

[node name="Image" type="Sprite2D" parent="Sprite"]
texture_filter = 1
material = SubResource("ShaderMaterial_rhrab")
position = Vector2(0, -2)
texture = ExtResource("4_f3x80")
hframes = 2

[node name="Border" type="Sprite2D" parent="Sprite"]
modulate = Color(1, 1, 0, 1)
texture = ExtResource("2_7p586")

[node name="gold_particle" type="GPUParticles2D" parent="."]
position = Vector2(0, -2)
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_t6f2j")
one_shot = true

[node name="taken_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_qug5m")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="finished" from="gold_particle" to="." method="_on_gold_particle_finished"]
